# RAG-MCP-DEMO

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start_server.sh  xx.md
.claude/: settings.local.json
config/: default.yaml
docs/: README.md
docs/api/: reference.md
docs/architecture/: design.md
docs/configuration/: install.md
docs/deep-dive/: core-modules.md
docs/development/: extend.md  testing.md
docs/faq/: README.md
docs/getting-started/: quickstart.md
docs/mcp/: usage.md
docs/superpowers/plans/: 2026-04-16-rag-mcp-demo.md
docs/superpowers/specs/: 2026-04-16-rag-mcp-demo-design.md
examples/: 01_basic_ingestion.py  02_basic_query.py
frontend/: app.js  index.html
knowledge_base/: evaluation_test_doc.txt  large_test.txt  simple_test.txt  test.txt  test_doc.txt  test_rag.txt  毛泽东选集.txt  毛泽东选集_第五卷.txt  毛泽东选集_第五卷_整理版.txt  量子物理.txt
scripts/: evaluate_with_ground_truth.py  start_api_server.py  test_full_connection.py  test_full_pipeline.py  test_models.py  test_registry.py  verify_setup.py
src/api/: server.py
src/evaluation/: base.py  ragas_evaluator.py
src/mcp_server/: server.py
src/rag/components/: __init__.py  factory.py
src/rag/llamaindex/: hybrid_retriever.py  pipeline.py
src/utils/: config.py  logger.py  registry.py
test_data/: evaluation_dataset.json
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_mcp_server.py
tests/unit/: test_components.py  test_config.py  test_hybrid_retriever.py  test_mcp_server.py  test_pipeline.py  test_smart_text_processor.py
(+15 files in other folders)
